// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-idOhPF iTKLMY Sidebar-resources "
>
  <div
    className="sc-dIUggk"
  >
    <div>
      <div
        className="sc-hHftDr keXJQh"
      >
        
      </div>
      <ul
        className="sc-dmlrTW hlOBcH"
      >
        <li
          className="sc-pFZIQ sc-kstrdz eaCWvj gajrif"
        >
          <div
            className="sc-jrAGrp sc-hBEYos jRGPiG gVXwBF isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hKgILt iMooxb isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-fodVxV exPSmb"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ bJwFId is-filtersHidden"
      style={
        Object {
          "marginBottom": "-16px",
          "marginTop": "24px",
        }
      }
    >
      <button
        className="sc-dlfnbm hYhRhc"
        onClick={[Function]}
      >
        Alerts on Top
      </button>
    </div>
    <div>
      <div
        className="sc-hHftDr keXJQh"
      >
        resources
      </div>
      <ul
        className="sc-dmlrTW hlOBcH"
      >
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp jRGPiG  isBuilding"
            data-name="resource4"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe gpekhu"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV exPSmb"
                  title="resource4"
                >
                  <span
                    className="sc-fFubgz eYvnCI"
                  >
                    resource4
                  </span>
                </div>
                <div
                  className="sc-crrsfI hoRyHo"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:36:03.000Z"
                    title="2017-12-21T15:36:03.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
                <button
                  className="sc-iBPRYJ EuQkO"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-dQppl kvAWEk"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-bqyKva dbJqxl"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp jRGPiG  isBuilding"
            data-name="resource9"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe gpekhu"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV exPSmb"
                  title="resource9"
                >
                  <span
                    className="sc-fFubgz eYvnCI"
                  >
                    resource9
                  </span>
                </div>
                <div
                  className="sc-crrsfI hoRyHo"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:58.000Z"
                    title="2017-12-21T15:35:58.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
                <button
                  className="sc-iBPRYJ EuQkO"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-dQppl kvAWEk"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-bqyKva dbJqxl"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp jRGPiG  isBuilding"
            data-name="resource19"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe gpekhu"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV exPSmb"
                  title="resource19"
                >
                  <span
                    className="sc-fFubgz eYvnCI"
                  >
                    resource19
                  </span>
                </div>
                <div
                  className="sc-crrsfI hoRyHo"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:48.000Z"
                    title="2017-12-21T15:35:48.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
                <button
                  className="sc-iBPRYJ EuQkO"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-dQppl kvAWEk"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-bqyKva dbJqxl"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp jRGPiG  isBuilding"
            data-name="resource29"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe gpekhu"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV exPSmb"
                  title="resource29"
                >
                  <span
                    className="sc-fFubgz eYvnCI"
                  >
                    resource29
                  </span>
                </div>
                <div
                  className="sc-crrsfI hoRyHo"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:38.000Z"
                    title="2017-12-21T15:35:38.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
                <button
                  className="sc-iBPRYJ EuQkO"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-dQppl kvAWEk"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-bqyKva dbJqxl"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp jRGPiG  isBuilding"
            data-name="resource39"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe gpekhu"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV exPSmb"
                  title="resource39"
                >
                  <span
                    className="sc-fFubgz eYvnCI"
                  >
                    resource39
                  </span>
                </div>
                <div
                  className="sc-crrsfI hoRyHo"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:28.000Z"
                    title="2017-12-21T15:35:28.000Z"
                  >
                    &lt;45s ago
                  </time>
                </span>
                <button
                  className="sc-iBPRYJ EuQkO"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-dQppl kvAWEk"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-bqyKva dbJqxl"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp jRGPiG  isBuilding"
            data-name="resource49"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe gpekhu"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV exPSmb"
                  title="resource49"
                >
                  <span
                    className="sc-fFubgz eYvnCI"
                  >
                    resource49
                  </span>
                </div>
                <div
                  className="sc-crrsfI hoRyHo"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:18.000Z"
                    title="2017-12-21T15:35:18.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
                <button
                  className="sc-iBPRYJ EuQkO"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-dQppl kvAWEk"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-bqyKva dbJqxl"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp jRGPiG  isBuilding"
            data-name="resource54"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe gpekhu"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV exPSmb"
                  title="resource54"
                >
                  <span
                    className="sc-fFubgz eYvnCI"
                  >
                    resource54
                  </span>
                </div>
                <div
                  className="sc-crrsfI hoRyHo"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:13.000Z"
                    title="2017-12-21T15:35:13.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
                <button
                  className="sc-iBPRYJ EuQkO"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-dQppl kvAWEk"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-bqyKva dbJqxl"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-idOhPF iTKLMY Sidebar-resources "
>
  <div
    className="sc-dIUggk"
  >
    <div>
      <div
        className="sc-hHftDr keXJQh"
      >
        
      </div>
      <ul
        className="sc-dmlrTW hlOBcH"
      >
        <li
          className="sc-pFZIQ sc-kstrdz eaCWvj gajrif"
        >
          <div
            className="sc-jrAGrp sc-hBEYos jRGPiG gVXwBF isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hKgILt iMooxb isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-fodVxV exPSmb"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ bJwFId is-filtersHidden"
      style={
        Object {
          "marginBottom": "-16px",
          "marginTop": "24px",
        }
      }
    >
      <button
        className="sc-dlfnbm hYhRhc"
        onClick={[Function]}
      >
        Alerts on Top
      </button>
    </div>
    <div>
      <div
        className="sc-hHftDr keXJQh"
      >
        resources
      </div>
      <ul
        className="sc-dmlrTW hlOBcH"
      />
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-idOhPF iTKLMY Sidebar-resources "
>
  <div
    className="sc-dIUggk"
  >
    <div>
      <div
        className="sc-hHftDr keXJQh"
      >
        
      </div>
      <ul
        className="sc-dmlrTW hlOBcH"
      >
        <li
          className="sc-pFZIQ sc-kstrdz eaCWvj gajrif"
        >
          <div
            className="sc-jrAGrp sc-hBEYos jRGPiG gVXwBF isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hKgILt iMooxb isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-fodVxV exPSmb"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ bJwFId is-filtersHidden"
      style={
        Object {
          "marginBottom": "-16px",
          "marginTop": "24px",
        }
      }
    >
      <button
        className="sc-dlfnbm hYhRhc"
        onClick={[Function]}
      >
        Alerts on Top
      </button>
    </div>
    <div>
      <div
        className="sc-hHftDr keXJQh"
      >
        resources
      </div>
      <ul
        className="sc-dmlrTW hlOBcH"
      >
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp jRGPiG  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe gpekhu"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV exPSmb"
                  title="vigoda"
                >
                  <span
                    className="sc-fFubgz eYvnCI"
                  >
                    vigoda
                  </span>
                </div>
                <div
                  className="sc-crrsfI hoRyHo"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:36:07.000Z"
                    title="2017-12-21T15:36:07.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
                <button
                  className="sc-iBPRYJ EuQkO"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-dQppl kvAWEk"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isUnhealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: error"
                >
                  <svg
                    fill="#ffffff"
                  >
                    error.svg
                  </svg>
                </div>
                <div
                  className="sc-bqyKva dbJqxl"
                >
                  Update error
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp jRGPiG  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe gpekhu"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV exPSmb"
                  title="snack"
                >
                  <span
                    className="sc-fFubgz eYvnCI"
                  >
                    snack
                  </span>
                </div>
                <div
                  className="sc-crrsfI hoRyHo"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:57.000Z"
                    title="2017-12-21T15:35:57.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
                <button
                  className="sc-iBPRYJ EuQkO"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-dQppl kvAWEk"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isUnhealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: error"
                >
                  <svg
                    fill="#ffffff"
                  >
                    error.svg
                  </svg>
                </div>
                <div
                  className="sc-bqyKva dbJqxl"
                >
                  Update error
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-idOhPF iTKLMY Sidebar-resources "
>
  <div
    className="sc-dIUggk"
  >
    <div>
      <div
        className="sc-hHftDr keXJQh"
      >
        
      </div>
      <ul
        className="sc-dmlrTW hlOBcH"
      >
        <li
          className="sc-pFZIQ sc-kstrdz eaCWvj gajrif"
        >
          <div
            className="sc-jrAGrp sc-hBEYos jRGPiG gVXwBF isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hKgILt iMooxb isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-fodVxV exPSmb"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ bJwFId is-filtersHidden"
      style={
        Object {
          "marginBottom": "-16px",
          "marginTop": "24px",
        }
      }
    >
      <button
        className="sc-dlfnbm hYhRhc"
        onClick={[Function]}
      >
        Alerts on Top
      </button>
    </div>
    <div>
      <div
        className="sc-hHftDr keXJQh"
      >
        resources
      </div>
      <ul
        className="sc-dmlrTW hlOBcH"
      >
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp jRGPiG  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe gpekhu"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV exPSmb"
                  title="vigoda"
                >
                  <span
                    className="sc-fFubgz eYvnCI"
                  >
                    vigoda
                  </span>
                </div>
                <div
                  className="sc-crrsfI hoRyHo"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  —
                </span>
                <button
                  className="sc-iBPRYJ EuQkO"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-dQppl kvAWEk"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isBuilding"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: in progress"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-bqyKva dbJqxl"
                >
                  Updating…
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp jRGPiG  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe gpekhu"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV exPSmb"
                  title="snack"
                >
                  <span
                    className="sc-fFubgz eYvnCI"
                  >
                    snack
                  </span>
                </div>
                <div
                  className="sc-crrsfI hoRyHo"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  —
                </span>
                <button
                  className="sc-iBPRYJ EuQkO"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-dQppl kvAWEk"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isBuilding"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: in progress"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-bqyKva dbJqxl"
                >
                  Updating…
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;
